syntax = "proto3";

package bank;

option go_package = "./bank";

service BankService {
    rpc CreateBank(BankRequest) returns (BankResponse);
    rpc GetBankData(GetBankDataRequest) returns (BankResponse);
    rpc SetBankData(SetBankDataRequest) returns (BankResponse);
}

message Bank {
    string id = 1;
    int64 value = 2;
}

message GetBankDataRequest {
    string token = 1;
}

message SetBankDataRequest {
    string token = 1;
    int64 value = 2;
}

message BankRequest {
    string token = 1;
}

message BankResponse{
    Bank bank = 1;
}

